--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -16,11 +16,50 @@
 
 .videocard {
   margin-top: 1.2rem;
-  border-radius: 10px;
+  border-radius: 20px;
+  padding: 10px;
   background: #f4f5f6;
   width: 90%;
-  height: 30%;
+  height: 25%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.recommended {
+  /* background: #dddddd; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.separation {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding: 0.5rem 0.5rem;
+}
+
+.videoicon {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.videoiconcont {
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #dddddd;
+  border-radius: 5px;
+  padding: 0.2rem;
 }
 
 .scrollY {
@@ -77,4 +116,32 @@
   font-size: 13;
   color: #1d2d3d;
   text-align: center;
+}
+
+.videotitle {
+  margin-top: 2rem;
+  font-weight: 600;
+  font-size: 25;
+  color: #f4f5f6;
+  text-align: center;
+}
+
+.videosubtitlecont {
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #5D92B0;
+  border-radius: 5px;
+  padding: 0.2rem 0.5rem;
+}
+
+.videosubtitle {
+  font-weight: 900;
+  font-size: 17;
+  color: #f4f5f6;
+  text-align: center;
+  text-decoration: underline;
+  /* outline-color: #5D92B0 */
 }
