--- a/app/styles/quiz.module.css
+++ b/app/styles/quiz.module.css
@@ -8,4 +8,51 @@
 
 .card{
     padding: 40px 20px;
+    background-color: #f5f5f5;
+}
+
+
+.title{
+    text-align: center;
+    color: #5D92B0;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.subtitle{
+    text-align: center;
+    color: #5D92B0;
+    margin-bottom: 10px;
+    font-size: 1.3rem;
+}
+
+.question{
+    font-weight: 700;
+    text-align: justify;
+    font-size: 1rem;
+}
+
+.options_container{
+    padding: 10px 0;
+}
+
+.single_option{
+    flex-direction: row;
+    margin: 10px 0;
+    align-items: center;
+}
+
+.option_text{
+    flex: 1;
+}
+
+.option_text{
+    flex: 1;
+}
+
+.score{
+    text-align: right;
+    margin: 0 20px 5px 0;
+    font-size: 0.9rem;
 }
