--- a/app/styles/quiz.module.css
+++ b/app/styles/quiz.module.css
@@ -56,3 +56,38 @@
     margin: 0 20px 5px 0;
     font-size: 0.9rem;
 }
+
+.card_title{
+    font-weight: 900;
+    font-size: 1.3rem;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.not_approved, .approved{
+    margin: 10px 30px;
+    text-align: center;
+    color:  #f5f5f5;
+    border-radius: 10px;
+    padding: 10px 0;
+}
+
+.approved{
+    background-color:  #106d20b6;
+}
+
+.not_approved{
+    background-color: #ba1a1ab6;
+}
+
+.score_info{
+    margin: 5px 0 20px 20px;
+}
+
+.text_info{
+    font-size: 1.1rem;
+}
+
+.finish_button{
+    margin: 0 20px;
+}
